--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ap-secrets",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "ap-secrets",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-service": "node src/start-service.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/openaplis/ap-secrets#readme",
   "dependencies": {
-    "js-base64": "^2.1.9"
+    "chai": "^3.5.0",
+    "grpc": "^1.3.1"
   }
 }
