--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/openaplis/ap-secrets#readme",
   "dependencies": {
     "chai": "^3.5.0",
+    "dotenv": "^4.0.0",
     "grpc": "^1.3.1"
   }
 }
